--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security</groupId>-->
+<!--			<artifactId>spring-security-oauth2-jose</artifactId>-->
+<!--			<version>6.3.3</version>-->
+<!--		</dependency>-->
 
 
 		<dependency>
